...
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/OptionsViewTextFieldTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pocketpaint_radius_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:inputType="number"
...
            tools:ignore="LabelFor"
            tools:text="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <SeekBar
        android:id="@+id/pocketpaint_spray_radius_seek_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:minHeight="30dip"
        android:layout_alignTop="@id/pocketpaint_spray_radius_text_layout"
        android:layout_toEndOf="@+id/pocketpaint_spray_radius_text_layout"
...
