<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2022 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pocketpaint_stroke_top_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pocketpaint_stroke_width_width_text_layout"
            style="@style/TextFieldTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pocketpaint_stroke_width_width_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pocketpaint_round_rect_shape"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:layoutDirection="ltr"
                android:minEms="3"
                android:padding="4dp"
                android:saveEnabled="false"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                tools:ignore="LabelFor,TouchTargetSizeCheck,TouchTargetSizeCheck"
                tools:text="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/pocketpaint_stroke_width_seek_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/pocketpaint_stroke_width_width_text_layout"
            android:layout_alignBottom="@id/pocketpaint_stroke_width_width_text_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/pocketpaint_stroke_width_width_text_layout"
            android:max="100"
            android:minHeight="30dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pocketpaint_stroke_bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp">
            <!--> This Linear layout is needed for the preview.
        The Brush tool searches for the Top of the parent<-->
            <org.catrobat.paintroid.ui.tools.BrushToolView
                android:id="@+id/pocketpaint_brush_tool_preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/pocketpaint_stroke_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layoutDirection="ltr"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/pocketpaint_stroke_ibtn_circle"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                app:chipIcon="@drawable/ic_pocketpaint_tool_circle" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pocketpaint_stroke_ibtn_rect"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_pocketpaint_tool_square" />

        </com.google.android.material.chip.ChipGroup>
    </RelativeLayout>

</RelativeLayout>
