...
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp" />

        <org.catrobat.paintroid.colorpicker.AlphaSliderView
            android:id="@+id/color_alpha_slider"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone" />
...
