...
    <string name="share_image_menu">Share image</string>
    <string name="share_image_via_text">Send image via</string>
    <string name="pocketpaint_menu_about" translatable="false">@string/pocketpaint_about_title</string>
    <string name="menu_rate_us">Rate us!</string>
    <string name="menu_export">Export</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_advanced">Advanced settings</string>
    <string name="menu_zoom_settings">Zoom window settings</string>
    <string name="saved_to">Image saved to\n</string>
    <string name="saved">Image saved</string>
    <string name="copy_to">Copy saved to\n</string>
    <string name="copy">Copy saved</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="overwrite_button_text">Overwrite</string>

    <string name="resize_nothing_to_resize">nothing to resize</string>
    <string name="resize_cannot_resize_to_this_size">cannot resize to this size</string>
    <string name="resize_max_image_resolution_reached">max image resolution reached</string>

...

    <string name="pocketpaint_like_us">Do you like Pocket Paint?</string>
    <string name="pocketpaint_rate_us">Would you like to rate Pocket Paint?</string>
    <string name="pocketpaint_feedback">We are sorry to hear that. If you want to share your experience with us, please write to contact@catrobat.org</string>
    <string name="pocketpaint_yes">Yes</string>
    <string name="pocketpaint_no">No</string>
    <string name="pocketpaint_ok"  translatable="false">@android:string/ok</string>
    <string name="pocketpaint_cancel">Cancel</string>
    <string name="pocketpaint_not_now">Not now</string>
    <string name="pocketpaint_rate_us_title">Rate Pocket Paint</string>

    <string name="bottom_navigation_tools">Tools</string>
    <string name="bottom_navigation_current">Current</string>
...
