...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/pocketpaint_antialiasing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/dialog_antialiasing"
        android:textColor="@color/design_default_color_on_secondary"
        android:theme="@style/CustomSwitchTheme" />
...
